<resources>
    <string name="app_name">附加设置</string>
    <string name="settings">设置</string>
    <string name="double_tap">双击唤醒</string>
    <string name="double_tap1">黑屏状态下，双击唤醒屏幕</string>
    <string name="Charging">呼吸灯</string>
    <string name="Charging1">充电时呼吸灯常亮</string>
    <string name="u_touch_settings">U-Touch</string>
    <string name="screen_color">屏幕色调</string>
    <string name="unlock">指纹解锁</string>
    <string name="unlock1">将指纹应用于解锁</string>
    <string name="cover">皮套解锁</string>
    <string name="cover1">无密码状态下，打开皮套跳过锁屏界面</string>
    <string name="proximity">防误触</string>
    <string name="proximity1">防止在口袋中挤压而造成的误触</string>
    <string name="update">系统更新0</string>
    <string name="about">关于</string>
    <string name="author">作者 （点击反馈BUG）</string>
    <string name="author1">专一522</string>
</resources>
